--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="http://kdf5000.com">Blog</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -74,7 +77,15 @@
                 <h1 id="homeHeading">AN AWESOME ASSISTANT FOR YOUR BELOVED KINDLE</h1>
                 <hr>
                 <p>Kindler can automatically send a popular Ebook to your kindle everyweek!</p>
-                <a href="https://github.com/KDF5000/WeeklyBook" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <!-- <a href="https://github.com/KDF5000/WeeklyBook" class="btn btn-primary btn-xl page-scroll">Find Out More</a> -->
+                <form action="subcribe.php" class='center-block' style="width:300px" method="post">
+                    <div class="input-group input-group-lg">
+                        <span class="input-group-addon">@</span>
+                        <input type="text" class="form-control" placeholder="example@email.com">
+                    </div>
+                    <br />
+                    <input type="submit" value="Subscribe Now!" class="btn btn-primary btn-xl page-scroll" />
+                </form>
             </div>
         </div>
     </header>
@@ -83,10 +94,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Awesome Kindle Assistant - Handler</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                    <p class="text-faded">Kindler can automatically send a popular Ebook to your kindle everyweek!</p>
+                    <a href="https://github.com/KDF5000/WeeklyBook" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
             </div>
         </div>
@@ -235,8 +246,8 @@
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
+                <h2>Free Download !</h2>
+                <a href="https://github.com/KDF5000/WeeklyBook" class="btn btn-default btn-xl sr-button">Download Now!</a>
             </div>
         </div>
     </aside>
@@ -247,15 +258,15 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Ready to start your next project with me? That's great! Give me a call or send me an email and I will get back to you as soon as possible!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
+                    <p>131-6169-6790</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">kdf5000@163.com</a></p>
                 </div>
             </div>
         </div>
